--- a/src/index.html
+++ b/src/index.html
@@ -80,20 +80,22 @@
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
-              <h3 class="project-wrapper__text-title">Project Title 0</h3>
+              <h3 class="project-wrapper__text-title">Sharify</h3>
               <div>
                 <p class="mb-4">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Excepturi neque, ipsa animi maiores repellendus distinctio
-                  aperiam earum dolor voluptatum consequatur blanditiis
-                  inventore debitis fuga numquam voluptate ex architecto
-                  itaque molestiae.
+                  A lightweight, fast, and secure photo sharing web application. Build with React, Node.js, Express,
+                  MongoDB, and deployed on Azure.
+                  The application allows users to upload photos, view photos, and share photos with other users. It used
+                  passport.js for authentication, supports Google OAuth, and GitHub OAuth. It also implements a RESTful
+                  API for the backend and supports image file upload and download.
                 </p>
               </div>
-              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero" href="#!">
+              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
+                href="https://proj.nickchang.net/sharify/">
                 See Live
               </a>
-              <a rel="noreferrer" target="_blank" class="cta-btn text-color-main" href="#!">
+              <a rel="noreferrer" target="_blank" class="cta-btn text-color-main"
+                href="https://github.com/mrrubiks/Sharify">
                 Source Code
               </a>
             </div>
@@ -112,7 +114,7 @@
         <!-- /END Project -->
 
         <!-- Notice: each .row is a project -->
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
               <h3 class="project-wrapper__text-title">Project Title 1</h3>
@@ -143,11 +145,11 @@
               </a>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- /END Project -->
 
         <!-- Notice: each .row is a project -->
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text load-hidden">
               <h3 class="project-wrapper__text-title">Project Title 2</h3>
@@ -178,7 +180,7 @@
               </a>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- /END Project -->
       </div>
     </div>
