Updated project description

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1 " />
   <link rel="shortcut icon" type="image/png" href="assets/Favicon.png" />
 
-  <title>Nick Chang | Developer</title>
+  <title>Nick Zhang | Developer</title>
   <meta name="keywords" content="Nick, MERN Fullstack Developer" />
   <meta name="description" content="Nick Chang | Developer" />
 
@@ -24,7 +24,7 @@
   <section id="hero" class="jumbotron">
     <div class="container">
       <h1 class="hero-title load-hidden">
-        Hi, my name is <span class="text-color-main">Nick Chang</span>
+        Hi, my name is <span class="text-color-main">Nick Zhang</span>
         <br />
         I'm the Web Developer.
       </h1>
@@ -82,13 +82,18 @@
             <div class="project-wrapper__text load-hidden">
               <h3 class="project-wrapper__text-title">Sharify</h3>
               <div>
-                <p class="mb-4">
-                  A lightweight, fast, and secure photo sharing web application. Build with React, Node.js, Express,
-                  MongoDB, and deployed on Azure.
-                  The application allows users to upload photos, view photos, and share photos with other users. It used
-                  passport.js for authentication, supports Google OAuth, and GitHub OAuth. It also implements a RESTful
-                  API for the backend and supports image file upload and download.
-                </p>
+                <!-- <p class="mb-4"> -->
+                <ul class="mb-4" style="font-size:1.5rem;">
+                  <li> A lightweight, fast, and secure photo sharing web application.</li>
+                  <li> Built with <strong>React.js, Node.js, Express, MongoDB</strong> , and deployed on Azure.</li>
+                  <li>Designed to be <strong> responsive</strong> supporting mobile devices.</li>
+                  <li>Used Passport.js for authentication, supporting different <strong> OAuth</strong> Stategies</li>
+                  <li>
+                    Implemented a <strong> RESTful API</strong> for the backend and supports image file upload and
+                    download.
+                  </li>
+                </ul>
+                <!-- </p> -->
               </div>
               <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--hero"
                 href="https://proj.nickchang.net/sharify/">
@@ -105,7 +110,7 @@
               <a rel="noreferrer" href="#!" target="_blank">
                 <div data-tilt data-tilt-max="4" data-tilt-glare="true" data-tilt-max-glare="0.5"
                   class="thumbnail rounded js-tilt">
-                  <img alt="Project Image" class="img-fluid" src="assets/project.jpg" />
+                  <img alt="Project Image" class="img-fluid" src="assets/sharify.png" />
                 </div>
               </a>
             </div>
