--- a/src/index.html
+++ b/src/index.html
@@ -227,7 +227,7 @@
 
       <hr />
       <p class="footer__text">
-        © 2022 Made with <i class="fa fa-heart heart"></i> by Nick Chang
+        © 2022 Made with <i class="fa fa-heart heart"></i> by Nick Zhang
       </p>
     </div>
   </footer>
