Updated contact info

--- a/src/index.html
+++ b/src/index.html
@@ -213,11 +213,11 @@
       <a rel="noreferrer" href="#top" class="back-to-top">
         <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
       </a>
-      <div class="social-links"><a rel="noreferrer" href="mailto:nickchang418@gmail.com" target="_blank">
+      <div class="social-links"><a rel="noreferrer" href="mailto:zhant124@mcmaster.ca" target="_blank">
           <i class="fa fa-envelope" aria-hidden="true"></i>
 
         </a>
-        <a rel="noreferrer" href="https://www.linkedin.com/in/nick-chang-b3ab8a17b" target="_blank">
+        <a rel="noreferrer" href="https://www.linkedin.com/in/tieyun-nick-zhang/" target="_blank">
           <i class="fa fa-linkedin fa-inverse"></i>
         </a>
         <a rel="noreferrer" href="https://github.com/mrrubiks" target="_blank">
