--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
       <div class="contact-wrapper load-hidden">
         <p class="contact-wrapper__text">I am always available for exciting discussions
         </p>
-        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:nickchang418@gmail.com
+        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:zhant124@mcmaster.ca
 ">Call to
           Action</a>
       </div>
